--- a/index.html
+++ b/index.html
@@ -403,6 +403,10 @@
           <a href="#" class="nav__link">Come work with us!</a>
         </li>
       </ul>
+      <p class="copyright">
+        &copy; Copyright 2024 built by Yuta Asakura, Original design by Jonas
+        Schmedtmann.
+      </p>
     </footer>
   </body>
 </html>
